# serializer version: 1
# name: test_entities_created[media_player.modern-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'source_list': list([
        'aux1',
        'aux2',
        'aux3',
        'aux4',
        'aux5',
        'aux6',
        'aux7',
        'bd',
        'bt',
        'cd',
        'cdr',
        'dvd',
        'favorites',
        'flickr',
        'game',
        'hdradio',
        'iradio',
        'lastfm',
        'm_xport',
        'mplay',
        'napster',
        'net',
        'net_usb',
        'pandora',
        'phono',
        'rhapsody',
        'sat',
        'sat_cbl',
        'server',
        'sirius',
        'siriusxm',
        'spotify',
        'tuner',
        'tv',
        'usb_ipod',
        'v_aux',
        'vcr',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.modern',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.RECEIVER: 'receiver'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'marantz_rs232',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 3468>,
    'translation_key': 'receiver',
    'unique_id': '01KPBBPM6WCQ8148EFR0TCG1WW_main',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities_created[media_player.modern-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'receiver',
      'friendly_name': 'Modern',
      'is_volume_muted': False,
      'source': 'cd',
      'source_list': list([
        'aux1',
        'aux2',
        'aux3',
        'aux4',
        'aux5',
        'aux6',
        'aux7',
        'bd',
        'bt',
        'cd',
        'cdr',
        'dvd',
        'favorites',
        'flickr',
        'game',
        'hdradio',
        'iradio',
        'lastfm',
        'm_xport',
        'mplay',
        'napster',
        'net',
        'net_usb',
        'pandora',
        'phono',
        'rhapsody',
        'sat',
        'sat_cbl',
        'server',
        'sirius',
        'siriusxm',
        'spotify',
        'tuner',
        'tv',
        'usb_ipod',
        'v_aux',
        'vcr',
      ]),
      'supported_features': <MediaPlayerEntityFeature: 3468>,
      'volume_level': 0.40816326530612246,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.modern',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities_created[media_player.modern_zone_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'source_list': list([
        'aux1',
        'aux2',
        'aux3',
        'aux4',
        'aux5',
        'aux6',
        'aux7',
        'bd',
        'bt',
        'cd',
        'cdr',
        'dvd',
        'favorites',
        'flickr',
        'game',
        'hdradio',
        'iradio',
        'lastfm',
        'm_xport',
        'mplay',
        'napster',
        'net',
        'net_usb',
        'pandora',
        'phono',
        'rhapsody',
        'sat',
        'sat_cbl',
        'server',
        'sirius',
        'siriusxm',
        'spotify',
        'tuner',
        'tv',
        'usb_ipod',
        'v_aux',
        'vcr',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.modern_zone_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 2',
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.RECEIVER: 'receiver'>,
    'original_icon': None,
    'original_name': 'Zone 2',
    'platform': 'marantz_rs232',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 3460>,
    'translation_key': 'receiver',
    'unique_id': '01KPBBPM6WCQ8148EFR0TCG1WW_zone_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities_created[media_player.modern_zone_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'receiver',
      'friendly_name': 'Modern Zone 2',
      'source': 'tuner',
      'source_list': list([
        'aux1',
        'aux2',
        'aux3',
        'aux4',
        'aux5',
        'aux6',
        'aux7',
        'bd',
        'bt',
        'cd',
        'cdr',
        'dvd',
        'favorites',
        'flickr',
        'game',
        'hdradio',
        'iradio',
        'lastfm',
        'm_xport',
        'mplay',
        'napster',
        'net',
        'net_usb',
        'pandora',
        'phono',
        'rhapsody',
        'sat',
        'sat_cbl',
        'server',
        'sirius',
        'siriusxm',
        'spotify',
        'tuner',
        'tv',
        'usb_ipod',
        'v_aux',
        'vcr',
      ]),
      'supported_features': <MediaPlayerEntityFeature: 3460>,
      'volume_level': 0.5102040816326531,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.modern_zone_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities_created[media_player.modern_zone_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'source_list': list([
        'aux1',
        'aux2',
        'aux3',
        'aux4',
        'aux5',
        'aux6',
        'aux7',
        'bd',
        'bt',
        'cd',
        'cdr',
        'dvd',
        'favorites',
        'flickr',
        'game',
        'hdradio',
        'iradio',
        'lastfm',
        'm_xport',
        'mplay',
        'napster',
        'net',
        'net_usb',
        'pandora',
        'phono',
        'rhapsody',
        'sat',
        'sat_cbl',
        'server',
        'sirius',
        'siriusxm',
        'spotify',
        'tuner',
        'tv',
        'usb_ipod',
        'v_aux',
        'vcr',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.modern_zone_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 3',
    'options': dict({
    }),
    'original_device_class': <MediaPlayerDeviceClass.RECEIVER: 'receiver'>,
    'original_icon': None,
    'original_name': 'Zone 3',
    'platform': 'marantz_rs232',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 3460>,
    'translation_key': 'receiver',
    'unique_id': '01KPBBPM6WCQ8148EFR0TCG1WW_zone_3',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities_created[media_player.modern_zone_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'receiver',
      'friendly_name': 'Modern Zone 3',
      'source_list': list([
        'aux1',
        'aux2',
        'aux3',
        'aux4',
        'aux5',
        'aux6',
        'aux7',
        'bd',
        'bt',
        'cd',
        'cdr',
        'dvd',
        'favorites',
        'flickr',
        'game',
        'hdradio',
        'iradio',
        'lastfm',
        'm_xport',
        'mplay',
        'napster',
        'net',
        'net_usb',
        'pandora',
        'phono',
        'rhapsody',
        'sat',
        'sat_cbl',
        'server',
        'sirius',
        'siriusxm',
        'spotify',
        'tuner',
        'tv',
        'usb_ipod',
        'v_aux',
        'vcr',
      ]),
      'supported_features': <MediaPlayerEntityFeature: 3460>,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.modern_zone_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
